fix contrast issue with skip to main content

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -62,14 +62,19 @@ a {
   color: $px-white;
   font-weight: 700;
   left: 50%;
-  padding: 4px 16px;
+  padding: 8px 20px;
   position: absolute;
   transform: translateY(-100%);
   transition: transform 0.3s;
   z-index: 100;
+  background: darken($px-theme, 10%);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 
   &:focus {
     transform: translateY(0%);
+  }
+  &:hover {
+    background: darken($px-theme, 15%);
   }
 }
 
